test/fixtures/error/01-open-string/input.ts
import mint from "mintz";

export const x = mint<string>();
